--- a/INSTALL
+++ b/INSTALL
@@ -5,14 +5,14 @@ Prerequisites
 -------------
 
  * Python 2.4 or later (http://www.python.org/)
- * trytond 0.0.x (http://www.tryton.org/)
+ * trytond 1.1.x (http://www.tryton.org/)
  * trytond_party (http://www.tryton.org/)
  * trytond_currency (http://www.tryton.org/)
 
 Installation
 ------------
 
-Once you've downloaded and unpacked a trytond_company source release, enter the
+Once you've downloaded and unpacked the trytond_company source release, enter the
 directory where the archive was unpacked, and run:
 
     python setup.py install
