--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+Version 1.4.0 - 2009-10-19
+* Bug fixes (see mercurial logs for details)
 * Remove monkey patch for CompanyReport
 
 Version 1.2.0 - 2009-04-20
