--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 1.2.2 - 2009-12-09
+* Bug fixes (see mercurial logs for details)
+
 Version 1.2.1 - 2009-11-24
 * Bug fixes (see mercurial logs for details)
 
