--- a/locale/fr_FR.po
+++ b/locale/fr_FR.po
@@ -46,6 +46,10 @@ msgctxt "field:company.company,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
+msgctxt "field:company.company,timezone:"
+msgid "Timezone"
+msgstr "Fuseau Horaire"
+
 msgctxt "field:company.company,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
