--- a/locale/de_DE.po
+++ b/locale/de_DE.po
@@ -46,6 +46,10 @@ msgctxt "field:company.company,rec_name:"
 msgid "Name"
 msgstr "Name"
 
+msgctxt "field:company.company,timezone:"
+msgid "Timezone"
+msgstr "Zeitzone"
+
 msgctxt "field:company.company,write_date:"
 msgid "Write Date"
 msgstr "Zuletzt geändert"
