--- a/locale/es_AR.po
+++ b/locale/es_AR.po
@@ -46,6 +46,10 @@ msgctxt "field:company.company,rec_name:"
 msgid "Name"
 msgstr "Nombre"
 
+msgctxt "field:company.company,timezone:"
+msgid "Timezone"
+msgstr "Zona horaria"
+
 msgctxt "field:company.company,write_date:"
 msgid "Write Date"
 msgstr "Fecha modificación"
@@ -176,7 +180,7 @@ msgstr "ID"
 
 msgctxt "field:res.user-company.employee,rec_name:"
 msgid "Name"
-msgstr "Nombre campo"
+msgstr "Nombre"
 
 msgctxt "field:res.user-company.employee,user:"
 msgid "User"
