--- a/locale/bg_BG.po
+++ b/locale/bg_BG.po
@@ -46,6 +46,11 @@ msgctxt "field:company.company,rec_name:"
 msgid "Name"
 msgstr "Име"
 
+#, fuzzy
+msgctxt "field:company.company,timezone:"
+msgid "Timezone"
+msgstr "Времева зона"
+
 msgctxt "field:company.company,write_date:"
 msgid "Write Date"
 msgstr "Променено на"
