--- a/locale/cs_CZ.po
+++ b/locale/cs_CZ.po
@@ -46,6 +46,10 @@ msgctxt "field:company.company,rec_name:"
 msgid "Name"
 msgstr ""
 
+msgctxt "field:company.company,timezone:"
+msgid "Timezone"
+msgstr ""
+
 msgctxt "field:company.company,write_date:"
 msgid "Write Date"
 msgstr ""
