--- a/locale/ru_RU.po
+++ b/locale/ru_RU.po
@@ -46,6 +46,11 @@ msgctxt "field:company.company,rec_name:"
 msgid "Name"
 msgstr "Наименование"
 
+#, fuzzy
+msgctxt "field:company.company,timezone:"
+msgid "Timezone"
+msgstr "Зона времени"
+
 msgctxt "field:company.company,write_date:"
 msgid "Write Date"
 msgstr "Дата изменения"
