--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 2.6.2 - 2015-02-28
+* Bug fixes (see mercurial logs for details)
+
 Version 2.6.1 - 2012-12-23
 * Bug fixes (see mercurial logs for details)
 
