change Ok to OK
issue4290
review9101002

--- a/locale/bg_BG.po
+++ b/locale/bg_BG.po
@@ -317,7 +317,7 @@ msgid "Cancel"
 msgstr "Отказ"
 
 msgctxt "wizard_button:company.company.config,start,company:"
-msgid "Ok"
+msgid "OK"
 msgstr "Добре"
 
 msgctxt "wizard_button:company.company.config,start,end:"
