--- a/locale/cs_CZ.po
+++ b/locale/cs_CZ.po
@@ -315,7 +315,7 @@ msgid "Cancel"
 msgstr ""
 
 msgctxt "wizard_button:company.company.config,start,company:"
-msgid "Ok"
+msgid "OK"
 msgstr ""
 
 msgctxt "wizard_button:company.company.config,start,end:"
