--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -351,7 +351,7 @@ msgid "Cancel"
 msgstr "Cancelar"
 
 msgctxt "wizard_button:company.company.config,start,company:"
-msgid "Ok"
+msgid "OK"
 msgstr "Aceptar"
 
 msgctxt "wizard_button:company.company.config,start,end:"
