--- a/locale/nl_NL.po
+++ b/locale/nl_NL.po
@@ -323,7 +323,7 @@ msgstr "Annuleren"
 
 #, fuzzy
 msgctxt "wizard_button:company.company.config,start,company:"
-msgid "Ok"
+msgid "OK"
 msgstr "Oké"
 
 #, fuzzy
