--- a/locale/sl_SI.po
+++ b/locale/sl_SI.po
@@ -315,7 +315,7 @@ msgid "Cancel"
 msgstr "Prekliči"
 
 msgctxt "wizard_button:company.company.config,start,company:"
-msgid "Ok"
+msgid "OK"
 msgstr "V redu"
 
 msgctxt "wizard_button:company.company.config,start,end:"
